# substrate_workspace

pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
